fix: add z-index

--- a/src/pages/Game/Game.module.css
+++ b/src/pages/Game/Game.module.css
@@ -29,6 +29,7 @@
     right: 20px;
     width: 80px;
     height: 80px;
+    z-index: 100000;
   }
 }
 
